--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
 			<tr align="center">
 				<td><a href="https://zhongjie1226.github.io/3W3D/hw1/1.html">hw1.html</a></td>
 				<td><a href="https://zhongjie1226.github.io/3W3D/hw2/1.html">hw2.html</a></td>
-                <td><a href="#">hw3.html</a></td>
+				<td><a href="https://zhongjie1226.github.io/3W3D/hw3/1.html">hw3.html</a></td>
 				<td><a href="#">hw4.html</a></td>
 			</tr>
 		</table>
 
-		
-		
-	
 
-		
+
+
+
+
 
 	</div>
 </body>
