--- a/index.html
+++ b/index.html
@@ -52,13 +52,41 @@
 	<div id="hw">
 
 		<table border="1" style="margin-left: auto; margin-right: auto;">
+
+			<tr align="center">
+				<td width="50%"><img src="https://zhongjie1226.github.io/3W3D/hw1/tree.gif" width="400px"
+						height="400px" />
+				</td>
+				<td width="50%"><img src="https://zhongjie1226.github.io/3W3D/hw2/vector.gif" width="400px"
+						height="400px" />
+				</td>
+			</tr>
+
 			<tr align="center">
 				<td><a href="https://zhongjie1226.github.io/3W3D/hw1/1.html">hw1.html</a></td>
 				<td><a href="https://zhongjie1226.github.io/3W3D/hw2/1.html">hw2.html</a></td>
+			</tr>
+		</table>
+
+		<br><br><br><br><br><br><br><br>
+		<table border="1" style="margin-left: auto; margin-right: auto;">
+
+			<tr align="center">
+				<td width="50%"><img src="https://zhongjie1226.github.io/3W3D/hw3/room.gif" width="400px"
+						height="400px" />
+				</td>
+				<td width="50%"><img src="#" width="400px" height="400px" />
+				</td>
+			</tr>
+
+			<tr align="center">
 				<td><a href="https://zhongjie1226.github.io/3W3D/hw3/1.html">hw3.html</a></td>
 				<td><a href="#">hw4.html</a></td>
 			</tr>
+			<!-- <p style="font-size: 50px;">latter...</p> -->
 		</table>
+
+
 
 
 
